color update - contrast error fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -372,7 +372,7 @@ form label.sbs {
 }
 
 #Gold {
-    color: darkgoldenrod;
+    color: #8f6600;
 }
 
 #Silver {
